index file restored

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1> this is a revision of git</h1>
+    <p> this is practice revision of what  we learned till now </p>
+    <p> this is practice revision of what  we learned till now </p>
+    <p> this is practice revision of what  we learned till now </p>
+    <p> this is practice revision of what  we learned till now </p>
     
 </body>
 </html>
