changed file done

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <p> this is practice revision of what  we learned till now </p>
     <p> this is practice revision of what  we learned till now </p>
     <p> this is practice revision of what  we learned till now </p>
-    
+    <h1>git amend</h1>
+    <h1>git clone cmd</h1>
+    <h1>git clone cmd</h1>
+    <h1>git clone cmd</h1>
 </body>
 </html>
