updated the index.html file

--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
     <h1>git clone cmd</h1>
     <h1>git clone cmd</h1>
     <h1>git clone cmd</h1>
+    <h1>git clone cmd</h1>
+    <h1>git clone cmd</h1>
+    <h1>git clone cmd</h1>
 </body>
 </html>
